# crackerjack

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
boxscore_cli/: boxscore.py  cli_tool.py  extractors_boxscore.py  fetch_schedule.py  fetch_standings.py  formatters_boxscore.py  formatters_linescore.py  prototype_fetch_standings.py  prototype_fetch_wildcard.py  prototype_sparkline.py  sparkline.py  team_lookup.py  tools_boxscore.py  tools_linescore.py  tools_mlbapi.py
crackerjack/: boxscore.py  boxscore_dummy.txt  cli_tool.py  extractors_boxscore.py  fetch_schedule.py  fetch_standings.py  formatters_boxscore.py  formatters_linescore.py  linescore_dummy.txt  sparkline.py  team_lookup.py  tools_boxscore.py  tools_linescore.py  tools_mlbapi.py
