
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crackerjack"
version = "0.0.0a1"
authors = [{name = "Cory Frontin", email = "charlievictorfoxtrot@gmail.com"},]
description = "A boxscore app for your 80-character CLI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "inquirer",
  "colorama"
]
# license_files = LICENSE.txt

[tool.setuptools]
packages = ["crackerjack",]

[project.scripts]
# boxscore = "crackerjack.boxscore:main"
# fetchscores = "crackerjack.fetch_schedule:main"
crackerjack = "crackerjack.cli_tool:main"

